<resources>
    <string name="app_name">Assignment03</string>
    <string name="next">Next</string>
    <string name="name_label">Name:</string>
    <string name="email_label">Email:</string>
    <string name="role_label">Role:</string>
    <string name="RB_student">Student</string>
    <string name="RB_Employee">Employee</string>
    <string name="RB_Other">Other</string>
    <string name="Name_Label" />
    <string name="Email_Hint">Enter Email</string>
    <string name="Name_Hint">Enter Name</string>
    <string name="Education_Label">Education:</string>
    <string name="Matrital_Status_label">Marital Status:</string>
    <string name="Living_Status_Label">Living Status:</string>
    <string name="Income_Label">Income:</string>
    <string name="Education_view">N/A</string>
    <string name="Marital_view">N/A</string>
    <string name="Living_status_view">N/a</string>
    <string name="Income_view">N/A</string>
    <string name="Select_button">Select</string>
    <string name="start">Start</string>
    <string name="Quetion">What is the highest degree or level of \neducation you have completed?</string>
    <string name="RadioButtonSE1">Below High School</string>
    <string name="RadioButtonSE2">High School</string>
    <string name="RadioButtonSE3">Bachelors Degree</string>
    <string name="RadioButtonSE4">Masters Degree</string>
    <string name="RadioButtonSE5">Ph.D or higher</string>
    <string name="RadioButtonSE6">Trade School</string>
    <string name="RadioButtonSE7">Other</string>
    <string name="Button_Cancel">Cancel</string>
    <string name="Button_Submit">Submit</string>
    <string name="MaritalStatusLabel">Select Marital Status</string>
    <string name="Status_Label">What is your marital status?</string>
    <string name="NotMarriedLael">Not Married</string>
    <string name="MarriedLabel">Married</string>
    <string name="NTSLabel">Prefer Not To Say</string>
    <string name="SelectLivingStatusLabel">Select Living Status</string>
    <string name="LivingStatusQuetion">Which of the following describes your \nliving status?</string>
    <string name="HomeOwnerLabel">Homeowner</string>
    <string name="RenterLabel">Renter</string>
    <string name="LesseeLabel">Lessee</string>
    <string name="LSOtherLabel">Other</string>
    <string name="HouseHoldIncomeLabel">House Hold Income</string>
    <string name="HoseHoldRangeLabel">""</string>
    <string name="Profile_Name_Label">Name:</string>
    <string name="Demographic_Label">Demographic Info</string>
    <string name="ProfileLabel1">Profile</string>
    <string name="ProfileNameFinal" />
    <string name="ProfileEmailFinal" />
    <string name="ProfileRoleFinal" />
    <string name="ProfileEducationfinal" />
    <string name="ProfileLSFinal" />
    <string name="ProfileMSFinal" />
    <string name="ProfileIncomeFinal" />
</resources>