<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectEducationActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Quetion"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/RadioGroupEducation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <RadioButton
            android:id="@+id/radioButtonBelowHighSchol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/RadioButtonSE1"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/radioButtonHighSchool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButtonSE2" />

        <RadioButton
            android:id="@+id/radioButtonBEDegree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButtonSE3" />

        <RadioButton
            android:id="@+id/radioButtonMSDegree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButtonSE4" />

        <RadioButton
            android:id="@+id/radioButtonPHD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButtonSE5" />

        <RadioButton
            android:id="@+id/radioButtonTradeSchool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButtonSE6" />

        <RadioButton
            android:id="@+id/radioButtonOtherSE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButtonSE7" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Button_Cancel"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroupEducation" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Button_Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toEndOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroupEducation" />

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroupEducation"
        tools:layout_editor_absoluteX="205dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>