<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectMaritalStatusActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="238dp"
        android:layout_height="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/MaritalStatusLabel"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="238dp"
        android:layout_height="26dp"
        android:layout_marginTop="48dp"
        android:text="@string/Status_Label"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="TextSizeCheck" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="150dp"
        android:layout_height="300dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <RadioButton
            android:id="@+id/radioButtonNotMarried"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/NotMarriedLael"
            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/radioButtonMarried"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:text="@string/MarriedLabel"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButtonNTS"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:text="@string/NTSLabel"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonCancelSMS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="24dp"
        android:text="@string/Button_Cancel"
        app:layout_constraintEnd_toStartOf="@+id/space4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonSubmitSMS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="24dp"
        android:text="@string/Button_Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/space4"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        tools:ignore="MissingConstraints" />

    <Space
        android:id="@+id/space4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />
</androidx.constraintlayout.widget.ConstraintLayout>